# yestatus_client

./: Cargo.toml  README.md
script/: install.sh
src/: main.rs  system_info.rs
