[package]
name = "server_status"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
regex = "1.5"
lazy_static = "1.4"
psutil = "3.2.2"
clap = { version = "3.0", features = ["derive"] }